# sdk-archive

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  LICENSE.txt  MANIFEST.in  README.md  __init__.py  api_connector.py  connect.py  dev_stuff.md  errors.py  faq.md  index.html  mkdocs.yml  nodes.py  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  trunk  utils.py  validators.py
.github/workflows/: build-docs.yml  install-test.yml  pytest.yml  trunk.yml
.trunk/: trunk.yaml
api/: index.html
data_model/nodes/: index.html
dev_codes/: README.md  database_setup.py  delete_db.py  download_test.py  random_testing.py  unit_si.py
docs/: API.md  README.md  api.md  cript_installation.md  exceptions.md  faq.md  faqs.md  index.md  more_resources.md  paginator.md  quickstart.md  tutorial.md
docs/data_model/: nodes.md  (+1 more)
examples/: create_materials.py  database_setup.py  delete_db.py  example_1.py  example_collection.py  example_group.py  example_material.py  example_process.py  example_publication.py  example_update.py  example_user.py  example_view.py  full_experiment.py  full_tutorial.ipynb  quickstart.ipynb  random_testing.py
exceptions/: index.html
paginator/: index.html
quickstart/: index.html
search/: search_index.json
tests/: README.md  docker-compose.yml  nodes_local_checks.py  requirements.txt  test_nodes.py  test_nodes_local.py
tutorial/: Advanced_searching.ipynb  Exporting.ipynb  Installation_and_Setup_Guide.docx  Part_1_CRIPT_tutorial.ipynb  Part_2_CRIPT_tutorial.ipynb  testing.ipynb
(+277 files in other folders)
