[metadata]
name = cript
version = 0.0.3
description = CRIPT (A Community Resource for Innovation in Polymer Technology)
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = None
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    cript
python_requires = >=3.9
package_dir =
    =src
include_package_data = true
install_requires =
    pymongo[srv]>=3.11
    pint>=0.17
    jsonpatch>=1.32
    rxnpy>=0.0.1

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
cript = py.typed

[flake8]
max-line-length = 160

