[metadata]
name = cript
version = 0.6.4
description = CRIPT Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
author = CRIPT Development Team
url = https://github.com/C-Accel-CRIPT/cript
license = MIT
license_files = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    beartype>=0.10.4
    globus-sdk>=3.7.0
    pint>=0.19.2
    requests>=2.27.1

[options.packages.find]
where=src